noinst_LIBRARIES = libVof.a
libVof_a_SOURCES = vof.h                 \
                        vof.cpp               \
                        vof_advance.cpp       \
                        vof_bdcurv.cpp        \
                        vof_curv.cpp          \
                        vof_front_minmax.cpp  \
                        vof_gradphi.cpp  \
                        vof_insert_bc.cpp     \
                        vof_tension.cpp       \
                        vof_totalvol.cpp

INCLUDE = -I@top_srcdir@/
