noinst_LIBRARIES = libVof.a
libVof_a_SOURCES = vof.h                 \
                        vof.cpp               \
                        vof_advance.cpp       \
                        vof_bdcurv.cpp        \
                        vof_curv.cpp          \
                        vof_front_minmax.cpp  \
                        vof_gradphi.cpp  \
                        vof_insert_bc.cpp     \
                        vof_tension.cpp       \
                        vof_totalvol.cpp     \
                        vof_upwind_advance.cpp \
                        vof_gradphic.cpp      \
                        vof_insert_bc_gradphic.cpp \
                        vof_insert_bc_norm.cpp \
                        vof_normalize.cpp \
                        vof_plane_vector_mc.cpp \
                        vof_plic.cpp                       

INCLUDE = -I@top_srcdir@/
